--- a/stylesheets/TaKo.buttons.styl
+++ b/stylesheets/TaKo.buttons.styl
@@ -18,6 +18,18 @@ header
     text-decoration none
     text-align center
 
+    & .counter
+      position relative
+      top -0.55em
+      margin-left 0.5em
+      margin-right 0.5em
+      line-height 15px
+      -webkit-border-radius 2px
+      -moz-border-radius 2px
+      border-radius 4px
+      padding 0.1em 0.2em 0.1em 0.2em
+      font-size FONT_SIZE_TINY
+
   & button.button
     text-indent 0
     border 1px solid #737476
@@ -30,6 +42,10 @@ header
     text-align center
     box-shadow 1px 1px rgba(255, 255, 255, .25)
 
+    & .counter
+      margin-left 0.05em
+      margin-right 0.05em
+
 footer div button
   width 100%
   height 100%
@@ -38,7 +54,7 @@ footer div button
     position relative
     top - INDENT * 1.5
     margin-left INDENT
-    margin-top INDENT
+    margin-right INDENT
     line-height 15px
     -webkit-border-radius 4px
     -moz-border-radius 4px
