--- a/stylesheets/TaKo.buttons.styl
+++ b/stylesheets/TaKo.buttons.styl
@@ -14,7 +14,7 @@ header
     display inline-block
     font-weight bold
     font-style normal
-    line-height 30px
+    height 100%
     text-decoration none
     text-align center
 
@@ -36,7 +36,7 @@ header
     display inline-block
     font-weight bold
     font-style normal
-    line-height 30px
+    line-height 35px
     text-decoration none
     text-align center
     box-shadow 1px 1px rgba(255, 255, 255, .25)
