--- a/stylesheets/TaKo.constants.styl
+++ b/stylesheets/TaKo.constants.styl
@@ -28,6 +28,8 @@ FONT_SIZE_LARGE                 = 1.4em
 INDENT                          = 0.8em
 NOTIFICATION_INDENT             = 2em
 
+COLUMN                          = 10%
+
 // FORM_HEIGHT                  = 30px
 // FORM_border                  = 2px
 // FORM_border_height           = FORM_HEIGHT + (FORM_border * 4)
