Removed unnecessary vendors

--- a/stylesheets/TaKo.section.styl
+++ b/stylesheets/TaKo.section.styl
@@ -62,17 +62,12 @@ footer
     display -webkit-box
     display -ms-box
     display -moz-box
+    display -0-box
     display box
 
-    -webkit-box-pack center
-    -ms-box-pack center
-    -moz-box-pack center
     box-pack center
 
     & > *
-      -webkit-box-flex 1
-      -ms-box-flex 1
-      -moz-box-flex 1
       box-flex 1
 
       &.active
