--- a/package/stylesheets/TaKo.css
+++ b/package/stylesheets/TaKo.css
@@ -21,8 +21,8 @@ header > nav.right > button{margin-right:5px}
 header > nav.left{left:0;}
 header > nav.left > button{margin-left:5px}
 footer{position:fixed;bottom:0;left:0;width:100%;height:65px;}
-footer > nav{width:100%;display:-webkit-box;display:-ms-box;display:-moz-box;display:box;-webkit-box-pack:center;-ms-box-pack:center;-moz-box-pack:center;-webkit-box-pack:center;-moz-box-pack:center;-ms-box-pack:center;-o-box-pack:center;box-pack:center;}
-footer > nav > *{-webkit-box-flex:1;-ms-box-flex:1;-moz-box-flex:1;-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;}
+footer > nav{width:100%;display:-webkit-box;display:-ms-box;display:-moz-box;display:0 -box;display:box;-webkit-box-pack:center;-moz-box-pack:center;-ms-box-pack:center;-o-box-pack:center;box-pack:center;}
+footer > nav > *{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;}
 footer > nav > *.active{background-color:rgba(250,250,250,0.15)}
 footer > nav > div{display:block;height:65px;text-align:center}
 article{position:fixed;top:50px;left:0;height:inherit;width:100%;display:none;padding-top:5px;}
@@ -59,18 +59,18 @@ aside ul > li.separator{background-color:rgba(0,0,0,0.1);color:#fff;padding:1px 
 .line > .nine_gap{margin-left:90%}
 .line > .ten_column{width:100%}
 .line > .ten_gap{margin-left:100%}
-.grid{width:100%;display:-webkit-box;display:-ms-box;display:-moz-box;display:box;}
-.grid.vertical{display:block;-webkit-box-orient:vertical;-ms-box-orient:vertical;-moz-box-orient:vertical;-webkit-box-orient:vertical;-moz-box-orient:vertical;-ms-box-orient:vertical;-o-box-orient:vertical;box-orient:vertical}
-.grid.horizontal{-webkit-box-orient:horizontal;-ms-box-orient:horizontal;-moz-box-orient:horizontal;-webkit-box-orient:horizontal;-moz-box-orient:horizontal;-ms-box-orient:horizontal;-o-box-orient:horizontal;box-orient:horizontal}
-.grid > *{-webkit-box-flex:1;-ms-box-flex:1;-moz-box-flex:1;-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1}
-.box_2{-webkit-box-flex:2;-ms-box-flex:2;-moz-box-flex:2;-webkit-box-flex:2;-moz-box-flex:2;-ms-box-flex:2;-o-box-flex:2;box-flex:2}
-.box_3{-webkit-box-flex:3;-ms-box-flex:3;-moz-box-flex:3;-webkit-box-flex:3;-moz-box-flex:3;-ms-box-flex:3;-o-box-flex:3;box-flex:3}
-.box_4{-webkit-box-flex:4;-ms-box-flex:4;-moz-box-flex:4;-webkit-box-flex:4;-moz-box-flex:4;-ms-box-flex:4;-o-box-flex:4;box-flex:4}
-.box_5{-webkit-box-flex:5;-ms-box-flex:5;-moz-box-flex:5;-webkit-box-flex:5;-moz-box-flex:5;-ms-box-flex:5;-o-box-flex:5;box-flex:5}
-.box_6{-webkit-box-flex:6;-ms-box-flex:6;-moz-box-flex:6;-webkit-box-flex:6;-moz-box-flex:6;-ms-box-flex:6;-o-box-flex:6;box-flex:6}
-.box_7{-webkit-box-flex:7;-ms-box-flex:7;-moz-box-flex:7;-webkit-box-flex:7;-moz-box-flex:7;-ms-box-flex:7;-o-box-flex:7;box-flex:7}
-.box_8{-webkit-box-flex:8;-ms-box-flex:8;-moz-box-flex:8;-webkit-box-flex:8;-moz-box-flex:8;-ms-box-flex:8;-o-box-flex:8;box-flex:8}
-.box_9{-webkit-box-flex:9;-ms-box-flex:9;-moz-box-flex:9;-webkit-box-flex:9;-moz-box-flex:9;-ms-box-flex:9;-o-box-flex:9;box-flex:9}
+.grid{width:100%;display:-webkit-box;display:-ms-box;display:-o-box;display:-moz-box;display:box;}
+.grid.vertical{-webkit-box-orient:vertical;-moz-box-orient:vertical;-ms-box-orient:vertical;-o-box-orient:vertical;box-orient:vertical}
+.grid.horizontal{-webkit-box-orient:horizontal;-moz-box-orient:horizontal;-ms-box-orient:horizontal;-o-box-orient:horizontal;box-orient:horizontal}
+.grid > *{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1}
+.box_2{-webkit-box-flex:2;-moz-box-flex:2;-ms-box-flex:2;-o-box-flex:2;box-flex:2}
+.box_3{-webkit-box-flex:3;-moz-box-flex:3;-ms-box-flex:3;-o-box-flex:3;box-flex:3}
+.box_4{-webkit-box-flex:4;-moz-box-flex:4;-ms-box-flex:4;-o-box-flex:4;box-flex:4}
+.box_5{-webkit-box-flex:5;-moz-box-flex:5;-ms-box-flex:5;-o-box-flex:5;box-flex:5}
+.box_6{-webkit-box-flex:6;-moz-box-flex:6;-ms-box-flex:6;-o-box-flex:6;box-flex:6}
+.box_7{-webkit-box-flex:7;-moz-box-flex:7;-ms-box-flex:7;-o-box-flex:7;box-flex:7}
+.box_8{-webkit-box-flex:8;-moz-box-flex:8;-ms-box-flex:8;-o-box-flex:8;box-flex:8}
+.box_9{-webkit-box-flex:9;-moz-box-flex:9;-ms-box-flex:9;-o-box-flex:9;box-flex:9}
 
 button{text-indent:0;border:0;display:inline-block;font-weight:bold;font-style:normal;line-height:40px;text-decoration:none;text-align:center}
 header button{text-indent:0;display:inline-block;font-weight:bold;font-style:normal;height:100%;text-decoration:none;text-align:center;}
