Fixed vertical grid (its container must have assigned a height value)

--- a/stylesheets/TaKo.layouts.styl
+++ b/stylesheets/TaKo.layouts.styl
@@ -76,7 +76,9 @@
   display box
 
   &.vertical
+    height inherit
     box-orient vertical
+    box-align stretch
 
   &.horizontal
     box-orient horizontal
