--- a/stylesheets/TaKo.section.styl
+++ b/stylesheets/TaKo.section.styl
@@ -62,7 +62,7 @@ footer
     display -webkit-box
     display -ms-box
     display -moz-box
-    display -0-box
+    display -o-box
     display box
 
     box-pack center
