--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -52,15 +52,15 @@ div[data-element="aside_background"]
 .anchor
   width 100%
 
-.tiny
-  font-size FONT_SIZE_TINY
+.smallest
+  font-size FONT_SIZE_SMALLEST
 
 .small
   font-size FONT_SIZE_SMALL
 
-.tiny
+.big
   font-size FONT_SIZE_BIG
 
-.tiny
-  font-size FONT_SIZE_LARGE
+.biggest
+  font-size FONT_SIZE_BIGGEST
 
