--- a/stylesheets/TaKo.constants.styl
+++ b/stylesheets/TaKo.constants.styl
@@ -15,11 +15,11 @@ NOTIFICATION_TRANSITION_TIME    = 500ms
 
 FOOTER_HEIGHT                   = 65px
 
-FONT_SIZE_TINY                  = 11px
+FONT_SIZE_SMALLEST              = 11px
 FONT_SIZE_SMALL                 = 0.9em
 FONT_SIZE_NORMAL                = 1.0em
 FONT_SIZE_BIG                   = 1.2em
-FONT_SIZE_LARGE                 = 1.4em
+FONT_SIZE_BIGGEST               = 1.4em
 
 // LIST_IMAGE                   = 44px
 // LIST_BIG_IMAGE               = 65px
