--- a/stylesheets/TaKo.buttons.styl
+++ b/stylesheets/TaKo.buttons.styl
@@ -7,6 +7,8 @@ button
   line-height 2.50em
   text-decoration none
   text-align center
+  padding-left 1em
+  padding-right 1em
 
   &.smallest
     line-height 2em
