--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -1,7 +1,6 @@
 body
   width 100%
   height 100%
-  background-color black
   -webkit-touch-callout none
   -webkit-user-select none
   -khtml-user-select none
@@ -14,7 +13,7 @@ aside
   width ASIDE_WIDTH
   padding ASIDE_PADDING
   z-index ASIDE_INDEX
-  position fixed
+  position absolute
   top 50px
   bottom 0
   left - ASIDE_TRANSITION
@@ -32,7 +31,7 @@ aside
     float right
 
 div[data-element="aside_background"]
-  position fixed
+  position absolute
   top HEADER_HEIGHT
   bottom 0
   left 0
