New section vertical layout, removing iscroll for scrolling and fixing android keyboard

--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -63,3 +63,10 @@ div[data-element="aside_background"]
 .biggest
   font-size FONT_SIZE_BIGGEST
 
+.scroll
+
+  &.vertical
+    overflow-y scroll
+
+  &.horizontal
+    overflow-x scroll
