--- a/stylesheets/TaKo.constants.styl
+++ b/stylesheets/TaKo.constants.styl
@@ -40,8 +40,9 @@ COLUMN                          = 10%
 
 /* Z-INDEXES */
 SECTION_INDEX                   = 100
-HEADER_H1_INDEX                 = 101
-HEADER_NAV_INDEX                = 102
+HEADER_INDEX                    = 101
+HEADER_H1_INDEX                 = 102
+HEADER_NAV_INDEX                = 103
 
 ASIDE_BCK_INDEX                 = 200
 ASIDE_INDEX                     = 201
