--- a/package/stylesheets/TaKo.css
+++ b/package/stylesheets/TaKo.css
@@ -10,22 +10,26 @@ div[data-element="aside_background"].show{background-color:#000;opacity:.6;z-ind
 .small{font-size:.9em}
 .big{font-size:1.2em}
 .biggest{font-size:1.4em}
+.scroll.vertical{overflow-y:scroll}
+.scroll.horizontal{overflow-x:scroll}
 
-section{height:inherit;width:inherit;position:absolute;z-index:0;top:0;left:0;opacity:0;display:-webkit-box;display:-ms-box;display:-moz-box;display:-o-box;display:box;-webkit-box-orient:vertical;-moz-box-orient:vertical;-ms-box-orient:vertical;-o-box-orient:vertical;box-orient:vertical;-webkit-transition-duration:300ms;-moz-transition-duration:300ms;-ms-transition-duration:300ms;-o-transition-duration:300ms;-webkit-transition-duration:300ms;-moz-transition-duration:300ms;-ms-transition-duration:300ms;-o-transition-duration:300ms;transition-duration:300ms;}
+section{height:inherit;width:inherit;position:absolute;z-index:0;top:0;left:0;opacity:0;-webkit-transition-duration:300ms;-moz-transition-duration:300ms;-ms-transition-duration:300ms;-o-transition-duration:300ms;-webkit-transition-duration:300ms;-moz-transition-duration:300ms;-ms-transition-duration:300ms;-o-transition-duration:300ms;transition-duration:300ms;}
 section.active{opacity:1;z-index:100}
-header{height:50px;width:100%;-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0;}
-header > h1{font-weight:bold;display:inline-block;position:absolute;text-align:center;width:100%;left:0;z-index:101}
-header > nav{margin-top:5px;position:absolute;z-index:102;}
+section:not(.active) > article{display:none}
+section.footer > article{padding-bottom:65px}
+header{position:fixed;top:0;left:0;right:0;height:50px;width:100%;z-index:101;}
+header > h1{font-weight:bold;display:inline-block;position:absolute;text-align:center;width:100%;left:0;z-index:102}
+header > nav{margin-top:5px;position:absolute;z-index:103;}
 header > nav.right{right:0;}
 header > nav.right > button{margin-right:5px}
 header > nav.left{left:0;}
 header > nav.left > button{margin-left:5px}
-footer{-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0;width:100%;height:65px;line-height:65px;}
+footer{position:fixed;bottom:0;left:0;right:0;width:100%;height:65px;line-height:65px;}
 footer > nav{width:100%;display:-webkit-box;display:-ms-box;display:-moz-box;display:-o-box;display:box;-webkit-box-pack:center;-moz-box-pack:center;-ms-box-pack:center;-o-box-pack:center;box-pack:center;}
 footer > nav > *{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;}
 footer > nav > *.active{background-color:rgba(250,250,250,0.15)}
 footer > nav > div{display:block;height:65px;text-align:center}
-article{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;width:100%;display:none;padding-top:5px;}
+article{width:100%;display:none;padding-top:5px;position:absolute;top:50px;}
 article.active{display:block}
 
 article ul{list-style:none;width:100%;padding:0;margin-left:0;margin-right:0;}
