--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -13,7 +13,7 @@ aside
   width ASIDE_WIDTH
   padding ASIDE_PADDING
   z-index ASIDE_INDEX
-  position absolute
+  position fixed
   top 50px
   bottom 0
   left - ASIDE_TRANSITION
@@ -31,7 +31,7 @@ aside
     float right
 
 div[data-element="aside_background"]
-  position absolute
+  position fixed
   top HEADER_HEIGHT
   bottom 0
   left 0
