Changes on header style

--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -31,7 +31,11 @@ body
   background-color BACKGROUND
 
 header
-  background-color THEME
+  background-image -webkit-linear-gradient(lighten(THEME, 40%), THEME)
+  background-image -moz-linear-gradient(lighten(THEME, 40%), THEME)
+  background-image -ms-linear-gradient(lighten(THEME, 40%), THEME)
+  background-image -o-linear-gradient(lighten(THEME, 40%), THEME)
+  background-image linear-gradient(lighten(THEME, 40%), THEME)
   color COLOR
 
   & .counter
