Header button background removed

--- a/stylesheets/TaKo.buttons.styl
+++ b/stylesheets/TaKo.buttons.styl
@@ -32,6 +32,7 @@ header
     height 100%
     text-decoration none
     text-align center
+    background-color rgba(0, 0, 0, 0)
 
     & .counter
       position relative
