--- a/package/stylesheets/TaKo.css
+++ b/package/stylesheets/TaKo.css
@@ -81,7 +81,7 @@ button.smallest{line-height:2em;padding:0 .6em}
 button.small{line-height:2.25em}
 button.big{line-height:2.75em}
 button.biggest{line-height:3em}
-header button{text-indent:0;display:inline-block;font-weight:bold;font-style:normal;height:100%;text-decoration:none;text-align:center;}
+header button{text-indent:0;display:inline-block;font-weight:bold;font-style:normal;height:100%;text-decoration:none;text-align:center;background-color:rgba(0,0,0,0);}
 header button .counter{position:relative;top:-.55em;margin-left:.5em;margin-right:.5em;line-height:15px;-webkit-border-radius:2px;-moz-border-radius:2px;-webkit-border-radius:4px;-moz-border-radius:4px;-ms-border-radius:4px;-o-border-radius:4px;border-radius:4px;padding:.1em .2em .1em .2em;font-size:11px}
 header button.button{text-indent:0;-webkit-border-radius:5px;-moz-border-radius:5px;-ms-border-radius:5px;-o-border-radius:5px;border-radius:5px;display:inline-block;font-weight:bold;font-style:normal;line-height:35px;text-decoration:none;text-align:center;-webkit-box-shadow:1px 1px rgba(255,255,255,0.25);-moz-box-shadow:1px 1px rgba(255,255,255,0.25);-ms-box-shadow:1px 1px rgba(255,255,255,0.25);-o-box-shadow:1px 1px rgba(255,255,255,0.25);box-shadow:1px 1px rgba(255,255,255,0.25);}
 header button.button .counter{margin-left:.05em;margin-right:.05em}
