--- a/stylesheets/TaKo.section.styl
+++ b/stylesheets/TaKo.section.styl
@@ -75,10 +75,14 @@ footer
     display -o-box
     display box
 
-    box-pack center
+    box-orient horizontal
+    box-direction normal
+    box-pack justify
+    box-align stretch
 
     & > *
       box-flex 1
+      width 100%
 
       &.active
         background-color rgba(250,250,250,0.15)
