Footer counter modifier

--- a/stylesheets/TaKo.buttons.styl
+++ b/stylesheets/TaKo.buttons.styl
@@ -1,4 +1,4 @@
-button
+button, .button
   text-indent 0
   border 0
   display inline-block
@@ -68,8 +68,6 @@ footer div button
   & .counter
     position relative
     top - INDENT * 1.5
-    margin-left INDENT
-    margin-right INDENT
     line-height 15px
     -webkit-border-radius 4px
     -moz-border-radius 4px
