--- a/stylesheets/TaKo.section.styl
+++ b/stylesheets/TaKo.section.styl
@@ -93,7 +93,8 @@ footer
       text-align center
 
 article
-  width 100%
+  min-width 100%
+  width auto
   display none
   padding-top 5px
   position absolute
