--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -63,6 +63,12 @@ div[data-element="aside_background"]
 .biggest
   font-size FONT_SIZE_BIGGEST
 
+.onleft
+  float left
+
+.onright
+  float right
+
 .scroll
 
   &.vertical
