--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -104,5 +104,20 @@ aside .current, footer .current
 div[data-element="notification"] > div.window
   background-color lighten(BACKGROUND, 25%)
 
+  &.success
+    background-color rgba(0,0,0,0.8)
+
+    & *
+      color rgba(250,250,250,0.6)
+
+    & .title
+      color rgba(255,255,255,0.9)
+
+    & .icon
+      color SUCCESS
+      font-weight bold
+
+
+
 
 
